# euler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
doc/: module_graph.puml  threads.puml
shaders/: color.vert  generate_blobs.rb  shader.slang
src/: CMakeLists.txt  generate-file  generate-file.rb
src/euler/app/: CMakeLists.txt  event.cpp  event.h  ext.cpp  ext.h  game_ext.cpp  game_ext.h  graphics_ext.cpp  graphics_ext.h  gui_ext.cpp  gui_ext.h  state.cpp  state.h  system.cpp  system.h  util_ext.cpp  util_ext.h  vulkan_ext.cpp  vulkan_ext.h  window.cpp  window.h
src/euler/engine/: CMakeLists.txt  engine.cpp  engine.h
src/euler/ext/: CMakeLists.txt  ext.cpp  ext.h  math.cpp  math.h  sdl.cpp  sdl.h
src/euler/game/: CMakeLists.txt  event.cpp  event.h  ext.cpp  ext.h  game_ext.cpp  game_ext.h  graphics_ext.cpp  graphics_ext.h  gui_ext.cpp  gui_ext.h  physics_ext.cpp  physics_ext.h  state.cpp  state.h  system.cpp  system.h  util_ext.cpp  util_ext.h  vulkan_ext.cpp  vulkan_ext.h  window.cpp  window.h
src/euler/graphics/: CMakeLists.txt  application.cpp  application.h  button.cpp  button.h  camera.h  checkbox.cpp  checkbox.h  color.cpp  color.h  color_picker.cpp  color_picker.h  element.cpp  element.h  ext.cpp  ext.h  font.cpp  font.h  gui.cpp  gui.h  image.cpp  image.h  knob.cpp  knob.h  polygon.cpp  polygon.h  progress_bar.cpp  progress_bar.h  radio.cpp  radio.h  renderer.cpp  renderer.h  selectable.cpp  selectable.h  shader.cpp  shader.h  shadow_environment.cpp  shadow_environment.h  shadow_object.cpp  shadow_object.h  (+12 more)
src/euler/gui/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  color_picker.cpp  color_picker.h  common.cpp  common.h  dropdown.h  element.cpp  element.h  ext.cpp  ext.h  font.cpp  font.h  gui.cpp  gui.h  instance.cpp  instance.h  knob.cpp  knob.h  nuklear.c  nuklear_defs.h  nuklear_sdl_vulkan.c  nuklear_sdl_vulkan.h  nuklear_shim.c  nuklear_shim.h  progress_bar.cpp  progress_bar.h  radio.cpp  radio.h  radio_button.h  row.cpp  row.h  selectable.cpp  selectable.h  slider.cpp  slider.h  style.cpp  (+8 more)
src/euler/physics/: CMakeLists.txt  body.cpp  body.h  chain_shape.cpp  chain_shape.h  circle_shape.cpp  circle_shape.h  contact.cpp  contact.h  distance_joint.h  dynamic_body.cpp  dynamic_body.h  edge_shape.cpp  edge_shape.h  ext.h  fixture.cpp  fixture.h  fluid.cpp  fluid.h  friction_joint.cpp  friction_joint.h  gear_joint.cpp  gear_joint.h  joint.cpp  joint.h  material.cpp  material.h  motor_joint.h  polygon_shape.cpp  polygon_shape.h  prismatic_joint.h  pulley_joint.cpp  pulley_joint.h  revolute_joint.h  rope_joint.cpp  rope_joint.h  shape.cpp  shape.h  static_body.cpp  static_body.h  (+6 more)
src/euler/render/: CMakeLists.txt  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadow_environment.cpp  shadow_environment.h  shadow_object.cpp  shadow_object.h  texture.cpp  texture.h
src/euler/renderer/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  font.cpp  font.h  gui.cpp  gui.h  polygon.cpp  polygon.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadow_environment.cpp  shadow_environment.h  shadow_object.cpp  shadow_object.h  texture.cpp  texture.h  vma.cpp  window.cpp  window.h
src/euler/util/: CMakeLists.txt  color.h  config.cpp  config.h  defer.cpp  defer.h  ext.h  geometry.cpp  geometry.h  logger.cpp  logger.h  mruby_exception.cpp  mruby_exception.h  object.cpp  object.h  opaque.cpp  opaque.h  optparse.c  sdl.cpp  sdl.h  state.cpp  state.h  storage.cpp  storage.h  thread.cpp  thread.h  value.cpp  value.h  version.cpp  version.h
src/euler/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  command_buffer.cpp  command_buffer.h  common.cpp  common.h  compute_pipeline.cpp  compute_pipeline.h  data.cpp  data.h  descriptor_buffer.cpp  descriptor_buffer.h  descriptor_control.cpp  descriptor_control.h  device.cpp  device.h  ext.cpp  ext.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  polygon.cpp  polygon.h  renderer.cpp  renderer.h  shader.h  shadow_environment.cpp  shadow_environment.h  surface.cpp  surface.h  (+11 more)
